Roost delete Commit

--- a/roost.newDivyesh.config
+++ b/roost.newDivyesh.config
@@ -26,3 +26,4 @@ test:
     configPath: service-test-suite/election-commission
 Last Updated By: Divyesh Maheshwari
 Last Updated On: 2022-07-11T06:07:24.443Z
+Deleted: "True"
